[FIX] jquery/Focusable: consider scroll container as focus candidate
- Overflowed DOM elements are included in the tab chain by the browser
  when there's no focusable elements within it.

- We need to update our logic to take the scroll container into
  consideration as well

SNOW: DINC0666097

--- a/src/sap.m/src/sap/m/themes/base/Dialog.less
+++ b/src/sap.m/src/sap/m/themes/base/Dialog.less
@@ -127,6 +127,11 @@ html.sap-desktop .sapMDialog {
 .sapMDialog .sapMDialogSection {
 	overflow: hidden;
 	position: relative;
+
+	&:focus {
+		outline: var(--sapContent_FocusWidth) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
+		outline-offset: ~"calc(-1 * var(--sapContent_FocusWidth))";
+	}
 }
 
 .sapMDialogScroll {
