--- a/src/sap.m/src/sap/m/themes/base/Popover.less
+++ b/src/sap.m/src/sap/m/themes/base/Popover.less
@@ -124,7 +124,8 @@
 }
 
 .sapMPopoverCont:focus {
-	outline: none;
+	outline: var(--sapContent_FocusWidth) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
+	outline-offset: ~"calc(-1 * var(--sapContent_FocusWidth))";
 }
 
 html[data-sap-ui-animation='on'] .sapMPopover.sapMPopoverOpacityTransition {
